--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Jimbo</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="lbl_email_evaluator">Correo:</string>
+    <string name="lbl_number_evalator">Numero:</string>
+    <string name="lbl_calification_evaluaitem">Califica tu experiencia</string>
+    <string name="lbl_empty_evaluator"/>
 </resources>
