update strings for fix errors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="lbl_email_evaluator">Correo:</string>
     <string name="lbl_number_evalator">Numero:</string>
+    <string name="lbl_sing_btn">Firmar </string>
     <string name="lbl_calification_evaluaitem">Califica tu experiencia</string>
     <string name="lbl_empty_evaluator"/>
 </resources>
